<resources>
    <string name="app_name">VMS</string>
    <!--  <string name="app_name">VisitorManagementSystem</string>-->
    <string name="title_activity_splash">Visitor Management</string>
    <string name="title_employee_login">Security Login</string>
    <string name="title_visitor_entry">Visitor Management</string>
    <string name="title_login_options">Welcome to Visitor Management</string>

    <string name="title_visitor_login">Welcome to VMS</string>
    <string name="hint_user_name">User Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="hint_mobile_number_visitor">Visitor Mobile Number*</string>
    <string name="hint_visitor_name">Visitor Name*</string>
    <string name="hint_host_name">Host Name*</string>
    <string name="hint_host_mobile">Host Mobile Number*</string>
    <string name="error_visitor_mobile">Please Enter Visitor Mobile Number</string>
    <string name="hint_visit_purpose">Purpose of Visit*</string>
    <string name="hint_address">Address</string>
    <string name="hint_address_visitor">Visitor Address*</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_gender_visitor">Visitor Gender*</string>
    <string name="btn_text_next">Next</string>
    <string name="mobile_empty_prompt">Please enter mobile number</string>
    <string name="mobile_length_prompt">Mobile number should be 10 digit\'s</string>
    <string name="mobile_invalid_prompt">Invalid mobile number.</string>
    <string name="btn_text_check">Check In</string>
    <string name="text_upload_photo"><u>Upload Photo</u></string>
    <string name="btn_text_send_otp">Send OTP</string>
    <string name="btn_text_verify_otp">Verify OTP</string>
    <string name="msg_not_verified">Mobile Number is Not Verified</string>
    <string name="msg_verified">Mobile Number is Verified</string>
    <string name="msg_otp_sent">OTP has been sent</string>
    <string name="msg_otp_verified">OTP has been verified</string>
    <string name="btn_text_security_login">Security</string>
    <string name="btn_text_admin_login">Admin</string>
    <string name="btn_text_register">Register</string>
    <string name="btn_text_visitor_login">Visitor Login</string>
    <string name="btn_text_login">Login</string>
    <string name="add_batch_number">Badge Number</string>
    <string name="btn_text_verify">Verify</string>
    <string name="btn_text_view">View</string>
    <string name="btn_text_manage_otp">Manage OTP</string>
    <string name="action_bar_login_title">Login</string>
    <string name="text_vms">VMS</string>
    <string name="batch_number">Badge no : %s</string>
    <string name="visitorList">Visitor\'s List</string>
    <string name="register_title">Visitor Registration</string>
    <string name="security_login">Security Login</string>
    <string name="string_checkout"><b>Checkout Visitor</b></string>
    <string name="title_verify_visitor">Verify your number</string>
    <string name="title_visitor_managment">Visit Process</string>
    <string name="string_vms"><b>Visitor</b>Management</string>

    <string name="btn_text_submit">Submit</string>

    <string name="visitorOTP">Visitor OTPs</string>
    <string name="mobile_number">Mobile #: %s</string>
    <string name="host_mobile_number">Host mobile #: %s</string>
    <string name="host_name">Host name: %s</string>
    <string name="otp_number">OTP : %d</string>
    <string name="btn_text_resend">Resend</string>
    <string name="please_enter_user_name">Please enter User Name</string>
    <string name="please_enter_password">Please enter Password</string>
    <string name="please_enter_reason">Please enter Reason</string>
    <string name="msg_valid_creds">Please enter valid credentials</string>
    <string name="error_photo_upload">Please upload your photo</string>
    <string name="error_photo_upload_host">Please upload host photo</string>
    <string name="error_select_purpose">Please select purpose of visit</string>
    <string name="msg_blacklisted">This number is Blacklisted</string>
    <string name="text_prev_visit">Previous Visit(s)</string>
    <string name="text_plan_visit">Planned Visit(s)</string>
    <string name="text_override_otp">Override OTP</string>
    <string name="btn_text_host">Host</string>

    <string name="checkout">Checkout</string>
    <string name="date_string">Date: %s</string>
    <string name="time_string">Time: %s</string>
    <string name="purpose_string">Purpose: %s</string>
    <string name="in_time_string">In Time: %s</string>
    <string name="out_time_string">Out Time</string>
    <string name="host_name_string">Host Name: %s</string>
    <string name="blacklist_visitor">Blacklist Visitor</string>
    <string name="text_mobile">Mobile #</string>
    <string name="text_reason">Reason</string>
    <string name="admin_login">Admin Login</string>
    <string name="title_about_us">About Us</string>
    <string name="btn_text_blacklist">Blacklist Visitor</string>
    <string name="btn_text_reports">Reports</string>
    <string name="btn_text_reports_planned">Planned Reports</string>
    <string name="btn_text_visitor_reports">Visitors Report</string>
    <string name="action_bar_title_admin_panel">Admin Panel</string>
    <string name="text_visitor_reports">Visitor Reports</string>
    <string name="text_select_date">Select Date</string>
    <string name="text_from_time">From Time</string>
    <string name="text_to_time">To Time</string>
    <string name="btn_text_proceed">Proceed</string>
    <string name="btn_text_plan_visit">Plan Visit</string>
    <string name="label_planned_visit">Planned Visit</string>
    <string name="host_login">Host Login</string>
    <string name="host_panel">Host Panel</string>
    <string name="host_reports">Host Reports</string>
    <string name="visitor_reports">Visitor Reports</string>
    <string name="hint_compy_name">Company Name</string>
    <string name="select_date">Select Date</string>
    <string name="selectTime">Select Time</string>
    <string name="hint_no_of_person">No of persons</string>
    <string name="msg_blocked">This visitor has been Blacklisted successfully</string>
    <string name="msg_select_date">Please select date</string>
    <string name="please_enter_visitor">Please enter visitor name</string>

    <string name="please_enter_company">Please enter company name</string>
    <string name="please_enter_noOfPerson">Please enter no of persons</string>
    <string name="please_enter_purpose">Please enter purpose of visit</string>
    <string name="toast_plan_visit">Visit Planned successfully</string>
    <string name="toast_host_saved">Host Profile saved successfully</string>
    <string name="toast_host_updated">Host Profile updated successfully</string>

    <string name="msg_select_from_time">Please select From Time</string>
    <string name="msg_select_to_time">To Time</string>
    <string name="otp">OTP:</string>
    <string name="hint_email">Email</string>
    <string name="hint_email_visitor">Visitor Email*</string>
    <string name="text_gender">Please select Gender</string>
    <string name="text_role">Please select role</string>
    <string name="text_to_time_error">To Time shoulde be greater than From Time</string>
    <string name="text_time">Time should not be less than current time</string>
    <string name="text_blacklisted_visitor">Blacklisted Visitors</string>
    <string name="btn_text_blacklisted">Blacklisted Visitors</string>
    <string name="text_about_us">Visitor Management System (VMS) is an Android based application for tracking visitors, built for in-house usage by Status Neo</string>
    <string name="btn_text_report_blacklisted">Blacklisted Visitors Report</string>
    <string name="btn_text_add_host">Add Host</string>

    <string name="text_from_date">From Date</string>
    <string name="text_visitor_details">Enter Visitor Details</string>
    <string name="text_host_details">Enter Host Details</string>
    <string name="to_date">To Date</string>
    <string name="msg_select_dates">Please select From Date and To Date</string>
    <string name="msg_from_date">Please select From Date</string>
    <string name="msg_to_date">Please select To Date</string>
    <string name="to_date_should_be_less_than_from_date">From date should be greater than To date</string>
    <string name="msg_no_data">No data found!</string>
    <string name="msg_something_went">Something went wrong.Please try again</string>
    <string name="hint_otp">Enter OTP</string>
    <string name="msg_otp_invalid">Invalid OTP! Please enter correct OTP</string>
    <string name="text_otp_resent">OTP has been Resent</string>
    <string name="text_otp_verified">OTP has been Verified</string>
    <string name="text_enter_otp">Please enter OTP</string>
    <string name="alert_resend_otp">Please resend the OTP first</string>
    <string name="user_already_blacklisted">Visitor has already blacklisted.</string>
    <string name="add_new_host">Add New Host</string>
    <string name="enter_user_name">User Name</string>
    <string name="enter_full_name">Full Name</string>
    <string name="enter_host_mobileNo">Mobile no</string>
    <string name="enter_host_pwd">Host Password</string>
    <string name="enter_host_email">Email Id</string>
    <string name="enter_host_designation">Designation</string>
    <string name="host_username_already_exist">User name already exists.</string>
    <string name="host_mobile_already_exist">Mobile number already exists.</string>
    <string name="host_already_exist">Host already exists.</string>
    <string name="host_name_ck">Host\'s name</string>
    <string name="visitor_name">Visitor\'s name</string>
    <string name="visitor_mobile_no">Visitor\'s Mobile </string>
    <string name="visit_purpose">Purpose of visit</string>
    <string name="visitor_m">Visitor\'s Mobile </string>

    <string name="in_time">In Time</string>
    <string name="visit_date">Visit Date</string>
    <string name="enter_your_mobile_number">Enter your \nmobile number</string>
    <string name="change_phone_number"><u> Change mobile number </u></string>
    <string name="send_the_code_again"><u> Resend OTP</u></string>
    <string name="enter_your_10_digit_mobile_n_number_below">Enter your 10 digit mobile \n number below</string>
    <string name="enter_your_verification_code">Enter your \nverification code</string>
    <string name="we_send_verification_code">We have sent verification code to</string>
    <string name="change_photo">Change Photo</string>
    <string name="powered_by">Powered by</string>
    <string name="upload_visitor_s_photo">Upload Visitor\'s Photo</string>
    <string name="visitor_s_list">Visitor\'s List</string>
    <string name="search_for_a_visitor_or_select_a_date_to_view_the_visitor_s_report">Search for a visitor or select a date \nto view the visitor’s report</string>
    <string name="host_s_name">Host\'s Name*</string>
    <string name="employee_role">Employee Role</string>
    <string name="host_name_dialog">Host Name</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="visitor_s_report">Visitor’s Report</string>
    <string name="host_s_list">Host\'s List</string>
    <string name="badge_number">Badge Number*</string>

    <string name="email_id_host">Email Id*</string>
    <string name="designation_host">Designation*</string>
    <string name="mobile_number_host">Mobile Number*</string>
</resources>