<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/_20sdp"
    >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/checkout_image"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_margin="@dimen/_5sdp"
            android:padding="@dimen/_2sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
            app:civ_border_width="1dp"
            app:civ_border_color="@color/black" />

        <TextView
            android:id="@+id/checkoutNameTv"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/visitor_name"
            android:textAlignment="textStart"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkout_image" />

        <TextView
            android:id="@+id/checkoutNameTextView"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkout_image" />

        <TextView
            android:id="@+id/checkoutMobileTv"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/visitor_mobile_no"
            android:textAlignment="textStart"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkoutNameTv" />

        <TextView
            android:id="@+id/checkoutMobileTextView"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkoutNameTextView" />

        <TextView
            android:id="@+id/checkoutHostNameTv"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/host_name_dialog"
            android:textAlignment="textStart"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkoutMobileTv" />

        <TextView
            android:id="@+id/checkoutEmailTextView"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkoutMobileTextView" />

        <TextView
            android:id="@+id/checkoutDateTv"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/visit_date"
            android:textAlignment="textStart"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkoutHostNameTv" />

        <TextView
            android:id="@+id/checkoutDateTextView"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="@dimen/_10ssp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkoutEmailTextView" />

        <TextView
            android:id="@+id/checkoutTimeTv"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/in_time"
            android:textAlignment="textStart"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkoutDateTv" />

        <TextView
            android:id="@+id/checkoutGenderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkoutDateTextView" />

        <TextView
            android:id="@+id/checkoutOutTimeTv"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/out_time_string"
            android:textAlignment="textStart"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkoutTimeTv" />

        <TextView
            android:id="@+id/checkoutOutTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkoutGenderTextView" />

        <TextView
            android:id="@+id/checkoutBatchTv"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/add_batch_number"
            android:textAlignment="textStart"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkoutOutTimeTv" />

        <TextView
            android:id="@+id/checkoutBatchNoTextView"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAlignment="textEnd"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkoutOutTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>