<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class=".SecurityLoginBinding">
    <variable
        name="viewState"
        type="com.android.visitormanagementsystem.utils.ProgressBarViewState" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.visitormanagementsystem.ui.securitylogin.SecurityLoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/action_bar_bg_color">
        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/logoLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_gravity="center_horizontal|center_vertical"
            >
            <ImageView
                android:id="@+id/ivLogoText"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="28dp"
                android:padding="@dimen/_4sdp"

                android:src="@drawable/logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />
            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="15dp"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/statusneo"
                app:layout_constraintTop_toBottomOf="@+id/ivLogoText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/tvToolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:text="@string/security_login"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_vms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/text_vms"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

<!--    <TextView-->
<!--        android:id="@+id/tv_login"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textSize="@dimen/font_size_screen_heading"-->
<!--        android:textColor="@color/black"-->
<!--        android:padding="@dimen/padding_thirty"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/et_user_name"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        android:text="@string/title_employee_login"/>-->
    <EditText
        android:id="@+id/et_user_name"
        android:hint="@string/hint_user_name"
        android:textColor="@color/black"
        android:textColorHint="@color/text_color_grey"
        android:layout_marginLeft="@dimen/margin_twenty_five"
        android:layout_marginRight="@dimen/margin_twenty_five"
        android:inputType="text"
        android:maxLines="1"
        android:layout_marginBottom="@dimen/margin_fiftin"
        android:paddingBottom="@dimen/et_padding"
        app:layout_constraintBottom_toTopOf="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <EditText
        android:id="@+id/et_password"
        android:hint="@string/hint_password"
        android:textColor="@color/black"
        android:textColorHint="@color/text_color_grey"
        android:layout_marginLeft="@dimen/margin_twenty_five"
        android:layout_marginRight="@dimen/margin_twenty_five"
        android:paddingBottom="@dimen/et_padding"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:maxLines="1"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />
    <Button
        android:id="@+id/btn_next"
        android:text="@string/btn_text_login"
        android:textAllCaps="false"
        app:backgroundTint="@null"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/margin_twenty_five"
        android:layout_marginLeft="@dimen/margin_twenty_five"
        android:layout_marginRight="@dimen/margin_twenty_five"
        android:textSize="@dimen/font_size_sixteen"
        android:background="@drawable/rounded_corner"
        android:layout_height="@dimen/_50sdp" />

        <ProgressBar
            android:id="@+id/progressBar_ID"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/purple_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:downloadStatusViewVisibility="@{viewState.progressbarEvent}"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>